--- a/src/app/modules/FeesManagement/student/addstudent/addstudent.component.scss
+++ b/src/app/modules/FeesManagement/student/addstudent/addstudent.component.scss
@@ -12,10 +12,11 @@ mat-radio-button{
     padding: 5px;
     //height: 60px;
     border: solid #eee;    
-    border-width: 1 1px;
+    border-width: 1px 1px;
     display: grid;
     place-items: center;
     margin-bottom: 10px;
+    width: 250px;
     
 }
 .demo-tab-group {
