--- a/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.html
@@ -1,106 +1,93 @@
 <mat-card>
-    <mat-card-subtitle>Student class</mat-card-subtitle>
+    <mat-card-title>Student class</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <form [formGroup]="studentclassForm">
-            <mat-form-field class="example-full-width">
-                <mat-label>Student</mat-label>
-                <input type="text"
-                       aria-label="student"
-                       matInput
-                       formControlName ="StudentId"
-                       [matAutocomplete]="auto">
-                <mat-autocomplete #auto="matAutocomplete">
-                  <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                    {{option}}
-                  </mat-option>
-                </mat-autocomplete>
-              </mat-form-field><br>
-            <!-- <mat-form-field appearance="outline" fxFlex [style.width.pc]="20">
-                <mat-label>Student</mat-label>
-                <mat-select formControlName="StudentId" #StudentId>
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of Students" [value]="p.StudentId">
-                        {{p.Name + " " + p.FatherName}}
-                    </mat-option>
-                </mat-select>
-                <span class="text-danger" *ngIf="f.StudentId.touched && f.StudentId.hasError('required')">Student is
-                    required.</span>
-            </mat-form-field> -->
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Class</mat-label>
-                <mat-select formControlName="ClassId" #ClassId>
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of Classes" [value]="p.MasterDataId">
-                        {{p.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-                <span class="text-danger" *ngIf="f.ClassId.touched && f.ClassId.hasError('required')">Class is
-                    required.</span>
-            </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Roll No.</mat-label>
-                <input formControlName="RollNo" autocomplete="Off" #RollNo matInput maxlength="50">
-                <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
-                <span class="text-danger" *ngIf="f.RollNo.touched && f.RollNo.hasError('required')">
-                    Roll No. is required.</span>
-            </mat-form-field><br>
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Section</mat-label>
-                <mat-select formControlName="Section" #SectionId>
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of Sections" [value]="p.MasterDataId">
-                        {{p.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-                <span class="text-danger" *ngIf="f.Section.touched && f.Section.hasError('required')">Class is
-                    required.</span>
-            </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Batch/Session</mat-label>
-                <mat-select formControlName="Batch" #BatchId>
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
-                        {{p.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-                <span class="text-danger" *ngIf="f.Batch.touched && f.Batch.hasError('required')">Batch is
-                    required.</span>
-            </mat-form-field><br>
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Fee type</mat-label>
-                <mat-select formControlName="FeeTypeId">
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of FeeType" [value]="p.MasterDataId">
-                        {{p.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-                <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Class is
-                    required.</span>
-            </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Language subject</mat-label>
-                <mat-select formControlName="LanguageSubject" #LanguageSubject>
-                    <mat-option value="0">---</mat-option>
-                    <mat-option *ngFor="let p of LanguageSubjectLower" [value]="p.MasterDataId">
-                        {{p.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field><br>
-            <mat-form-field appearance="outline" fxFlex [style.width.pc]="30">
-                <mat-label>Remarks</mat-label>
-                <input formControlName="Remarks" autocomplete="Off" #Remarks matInput maxlength="250">
-            </mat-form-field>
-            <mat-checkbox formControlName="Active" fxFlex>
-            </mat-checkbox>&nbsp; Active
-           
-            <mat-card-actions flexLayoutAlign="space-between center">
-                <button class="mat-raised-button">
-                    <mat-icon>save</mat-icon>
-                </button>
-                <button class="mat-raised-button">
-                    <mat-icon>cancel</mat-icon>
-                </button>
-            </mat-card-actions>
+            <div fxLayout="row">
+                <mat-form-field fxFlex>
+                    <mat-label>Student</mat-label>
+                    <mat-select formControlName="StudentId" fxFlex (selectionChange)="updateId($event)">
+                        <mat-option *ngFor="let student of Students" [value]="student.StudentId">{{student.studentName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div fxLayout="row wrap" fxLayoutGap="100px">
+                <mat-form-field appearance="outline">
+                    <mat-label>Class</mat-label>
+                    <mat-select formControlName="ClassId" #ClassId>
+                        <mat-option value="0">---</mat-option>
+                        <mat-option *ngFor="let p of Classes" [value]="p.MasterDataId">
+                            {{p.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                    <span class="text-danger" *ngIf="f.ClassId.touched && f.ClassId.hasError('required')">Class is
+                        required.</span>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Roll No.</mat-label>
+                    <input formControlName="RollNo" autocomplete="Off" #RollNo matInput maxlength="50">
+                    <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
+                    <span class="text-danger" *ngIf="f.RollNo.touched && f.RollNo.hasError('required')">
+                        Roll No. is required.</span>
+                </mat-form-field><br>
+                <mat-form-field appearance="outline">
+                    <mat-label>Section</mat-label>
+                    <mat-select formControlName="Section" #SectionId>
+                        <mat-option value="0">---</mat-option>
+                        <mat-option *ngFor="let p of Sections" [value]="p.MasterDataId">
+                            {{p.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                    <span class="text-danger" *ngIf="f.Section.touched && f.Section.hasError('required')">Class is
+                        required.</span>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Batch/Session</mat-label>
+                    <mat-select formControlName="Batch" #BatchId>
+                        <mat-option value="0">---</mat-option>
+                        <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
+                            {{p.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                    <span class="text-danger" *ngIf="f.Batch.touched && f.Batch.hasError('required')">Batch is
+                        required.</span>
+                </mat-form-field><br>
+                <mat-form-field appearance="outline">
+                    <mat-label>Fee type</mat-label>
+                    <mat-select formControlName="FeeTypeId">
+                        <mat-option value="0">---</mat-option>
+                        <mat-option *ngFor="let p of FeeType" [value]="p.MasterDataId">
+                            {{p.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                    <span class="text-danger" *ngIf="f.FeeTypeId.touched && f.FeeTypeId.hasError('required')">Class is
+                        required.</span>
+                </mat-form-field>
+                <mat-form-field appearance="outline">
+                    <mat-label>Language subject</mat-label>
+                    <mat-select formControlName="LanguageSubject" #LanguageSubject>
+                        <mat-option value="0">---</mat-option>
+                        <mat-option *ngFor="let p of LanguageSubjectLower" [value]="p.MasterDataId">
+                            {{p.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field><br>
+                <mat-form-field appearance="outline" [style.width.pc]="32">
+                    <mat-label>Remarks</mat-label>
+                    <input formControlName="Remarks" autocomplete="Off" #Remarks matInput maxlength="250">
+                </mat-form-field>
+                <mat-checkbox formControlName="Active">
+                </mat-checkbox>&nbsp; Active
+            </div>
         </form>
     </mat-card-content>
+    <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
+        <button class="mat-raised-button" (click)="save()">
+            <mat-icon>save</mat-icon>
+        </button>
+        <button class="mat-raised-button" (click)="back()">
+            <mat-icon>cancel</mat-icon>
+        </button>
+    </mat-card-actions>
 </mat-card>
