--- a/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.scss
+++ b/src/app/modules/FeesManagement/studentclass/addstudentclass/addstudentclass.component.scss
@@ -13,3 +13,12 @@ button{
   .example-full-width {
     width: 50%;
   }
+  .searchinput{
+    height: 40px;
+    width: 100%;
+    border: 0px 0px !important;
+    //border-color: lightgray;
+    border-collapse: collapse;
+    padding: 5px;
+    outline: none;
+  }
