--- a/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
+++ b/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
@@ -1,8 +1,12 @@
 <mat-card>
     <mat-card-title>Student Details</mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="center center">
+            <mat-form-field appearance="outline">
+                <mat-label>Roll no.</mat-label>
+                <input formControlName="RollNo" autocomplete="Off" matInput maxlength="50">
+            </mat-form-field>
             <mat-form-field appearance="outline">
                 <mat-label>Name</mat-label>
                 <input formControlName="Name" autocomplete="Off" matInput maxlength="50">
