--- a/src/app/modules/FeesManagement/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
+++ b/src/app/modules/FeesManagement/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>Student Fee Payment Details</mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
         <div class="example-container mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource">
