--- a/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/FeesManagement/classfee/dashboardclassfee/dashboardclassfee.component.html
@@ -2,85 +2,78 @@
     <mat-card-title>Class Fees</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content>
+        <strong>Class Fee Statuses</strong>
+        <mat-divider></mat-divider>
+        <div fxLayoutGap="10" fxLayout="row wrap" fxLayoutAlign="space-between">
+            <div *ngFor="let item of ClassStatuses">
+                <span><mat-checkbox [disabled]="true" [(checked)]="item.Done">
+                    </mat-checkbox> Class {{item.class}}
+                </span>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
+        <br>
         <form [formGroup]="searchForm">
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Class</mat-label>
-            <mat-select formControlName="ClassId" #Class>
-                <mat-option value="0">---</mat-option>
-                <mat-option *ngFor="let p of Classes" [value]="p.MasterDataId">
-                    {{p.MasterDataName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Fee name</mat-label>
-            <mat-select formControlName="FeeNameId" #FeeName>
-                <mat-option value="0">---</mat-option>
-                <mat-option *ngFor="let p of FeeNames" [value]="p.MasterDataId">
-                    {{p.MasterDataName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Batch/Session</mat-label>
-            <mat-select formControlName="Batch">
-                <mat-option value="0">---</mat-option>
-                <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
-                    {{p.MasterDataName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="ClassId" #Class>
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of Classes" [value]="p.MasterDataId">
+                        {{p.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Fee name</mat-label>
+                <mat-select formControlName="FeeNameId" #FeeName>
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of FeeNames" [value]="p.MasterDataId">
+                        {{p.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Batch/Session</mat-label>
+                <mat-select formControlName="Batch">
+                    <mat-option value="0">---</mat-option>
+                    <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
+                        {{p.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
 
-        <button class="mat-raised-button" (click)="GetClassFee()">
-            <mat-icon>search</mat-icon>
-        </button><br>
-    </form>
+            <button class="mat-raised-button" (click)="GetClassFee()">
+                <mat-icon>search</mat-icon>
+            </button><br>
+        </form>
         <div class="example-container mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource">
-                
-                <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
 
-                <!-- Position Column -->
                 <ng-container matColumnDef="SlNo">
                     <mat-header-cell *matHeaderCellDef> Sr.No. </mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.SlNo}} </mat-cell>
                 </ng-container>
 
-                <!-- <ng-container matColumnDef="ClassName">
-                    <mat-header-cell *matHeaderCellDef> Class </mat-header-cell>
-                    <mat-cell *matCellDef="let element">
-                       {{element.ClassName}}
-                    </mat-cell>
-                </ng-container> -->
                 <ng-container matColumnDef="FeeNameId" hidden>
                     <mat-header-cell *matHeaderCellDef> FeeID </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.FeeNameId}}
-                        <!-- <mat-select (selectionChange)="enableAction(element)" [(value)]="element.FeeNameId" placeholder="Fee">
-                            <mat-option *ngFor="let item of FeeNames" [value]="item.MasterDataId">
-                                {{item.MasterDataName}} </mat-option>
-                        </mat-select> -->
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FeeName">
                     <mat-header-cell *matHeaderCellDef> Fee </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element.FeeName}}
-                        <!-- <mat-select (selectionChange)="enableAction(element)" [(value)]="element.FeeNameId" placeholder="Fee">
-                            <mat-option *ngFor="let item of FeeNames" [value]="item.MasterDataId">
-                                {{item.MasterDataName}} </mat-option>
-                        </mat-select> -->
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Amount">
                     <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <app-edit-input [data]="element.Amount|number:'1.2-2'" (tried)="getoldvalue($event)"
-                        (focusOut)='enableAction(element)'></app-edit-input>
-                        </mat-cell>
+                            (focusOut)='updateAmount(element,$event)'></app-edit-input>
+                    </mat-cell>
                 </ng-container>
-
+<!-- 
                 <ng-container matColumnDef="Batch">
                     <mat-header-cell *matHeaderCellDef> Batch </mat-header-cell>
                     <mat-cell *matCellDef="let element">
@@ -89,15 +82,24 @@
                             </mat-option>
                         </mat-select>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                     <mat-cell style="justify-content: center;" *matCellDef="let element">
-                        <mat-checkbox [(checked)]="element.Active" (click)="$event.stopPropagation()" (change)="enableAction(element)">
+                        <mat-checkbox [checked]="element.Active" (click)="$event.stopPropagation()"
+                            (change)="updateActive(element)">
                         </mat-checkbox>
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="LocationId">
+                <ng-container matColumnDef="PaymentOrder">
+                    <mat-header-cell *matHeaderCellDef> Payment Order </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <app-edit-input [data]="element.PaymentOrder" (tried)="getoldvalue($event)"
+                            (focusOut)='updatePaymentOrder(element,$event)'></app-edit-input>
+                    </mat-cell>
+                </ng-container>
+
+                <!-- <ng-container matColumnDef="LocationId">
                     <mat-header-cell *matHeaderCellDef> Location </mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <mat-select (selectionChange)="enableAction(element)" [(value)]="element.LocationId" placeholder="location">
@@ -105,24 +107,18 @@
                             </mat-option>
                         </mat-select>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button [(disabled)]="!element.Action" mat-fab (click)="UpdateOrSave(element)"><mat-icon>save</mat-icon></button>
+                        <button [(disabled)]="!element.Action" mat-mini-fab (click)="UpdateOrSave(element)">
+                            <mat-icon>save</mat-icon>
+                        </button>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
             </mat-table>
         </div>
-
-<!-- 
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>Item 1</button>
-            <button mat-menu-item>Item 2</button>
-        </mat-menu> -->
-
     </mat-card-content>
 </mat-card>
-<!-- [checked]="selection.isSelected(element)" -->
