--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,9 @@ mat-card{
       width:100%;
     }
   }
+//   .mat-form-field-wrapper{
+//     padding-bottom: 0px !important;
+// }
 .mat-icon {
     vertical-align: middle;
  }
